--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<div class="donate-block emergency-theme donate-block--quote " style="background-image:url(&#39;https://staticassets.freepalestine.fund.uk/oxfamgb-production/images/RS362832_Day4_Destruction_of_Gaza.2e16d0ba.fill-1900x860.jpg&#39;)" id="donate-top">
+<div class="donate-block emergency-theme donate-block--quote " style="background-image:url(&#39;./gaza/gaza-hero.jpg&#39;)" id="donate-top">
 
     
     
